--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         amount: 1,  // 金額
                         memo: "Test Payment",
                         metadata: { productId: "12345" },
-                        targetUsername: "YourMerchantUsername" // **請填入商家的 Pi 帳號**
+                        targetUsername: "GBZ5NMY5K5OWQLLGW3AOH6JOYOHDSKDALQZI4JIJ2A4G6PQTEBZBEY7G" // **請填入商家的 Pi 帳號**
                     },
                     {
                         onReadyForServerApproval: (paymentId) => {
