--- a/index.html
+++ b/index.html
@@ -26,34 +26,17 @@
 
         // 登入功能
         async function login() {
-    try {
-        const authResult = await Pi.authenticate(['username', 'payments', 'wallet_address']);
-        currentUser = authResult.user;
-        document.getElementById('user-info').textContent = JSON.stringify(authResult.user, null, 2);
-        alert(`登入成功！用戶名: ${authResult.user.username}`);
-
-        console.log("AccessToken:", authResult.accessToken); // 確保 accessToken 正確
-        console.log("User Data:", authResult.user); // 檢查 user 資料
-
-        // 發送 accessToken 到後端驗證
-        const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyLogin", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ accessToken: authResult.accessToken }) // 確保 accessToken 正確傳遞
-        });
-
-        const result = await response.json();
-        console.log("伺服器回應:", result); // 檢查後端回應
-        if (result.error) {
-            alert("驗證失敗：" + result.error);
-        } else {
-            alert("登入驗證成功！");
+            try {
+                const authResult = await Pi.authenticate(['username', 'payments', 'wallet_address']);
+                currentUser = authResult.user;
+                document.getElementById('user-info').textContent = JSON.stringify(authResult.user, null, 2);
+                alert(`登入成功！用戶名: ${authResult.user.username}`);
+				console.log(authResult.accessToken); // 獲取 Access Token
+				console.log(authResult.user.uid);    // 獲取使用者的 uid（但未驗證）
+            } catch (error) {
+                alert("登入失敗: " + error.message);
+            }
         }
-    } catch (error) {
-        alert("登入失敗: " + error.message);
-    }
-}
-
 
         // 支付功能 (跳過伺服器驗證)
     async function pay() {
