--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://sdk.minepi.com/pi-sdk.js"></script>
 </head>
 <body>
-    <h1>Pi 支付測試 </h1>
+    <h1>Pi 支付測試 (無伺服器驗證)</h1>
     
     <button onclick="login()">1. 登入 Pi 帳號</button>
     <button onclick="pay()" style="margin-top:20px">2. 發起支付</button>
@@ -31,8 +31,6 @@
                 currentUser = authResult.user;
                 document.getElementById('user-info').textContent = JSON.stringify(authResult.user, null, 2);
                 alert(`登入成功！用戶名: ${authResult.user.username}`);
-				console.log(authResult.accessToken); // 獲取 Access Token
-				console.log(authResult.user.uid);    // 獲取使用者的 uid（但未驗證）
             } catch (error) {
                 alert("登入失敗: " + error.message);
             }
