--- a/index.html
+++ b/index.html
@@ -25,16 +25,69 @@
         });
 
         // 登入功能
-        async function login() {
-            try {
-                const authResult = await Pi.authenticate(['username', 'payments', 'wallet_address']);
-                currentUser = authResult.user;
-                document.getElementById('user-info').textContent = JSON.stringify(authResult.user, null, 2);
-                alert(`登入成功！用戶名: ${authResult.user.username}`);
-            } catch (error) {
-                alert("登入失敗: " + error.message);
-            }
+       async function login() {
+    try {
+        // 1️⃣ 進行 Pi Network 身份驗證
+        const authResult = await Pi.authenticate(['username', 'wallet_address']);
+        console.log("✅ 登入成功", authResult);
+
+        // 2️⃣ 處理未完成的支付
+        Pi.onIncompletePaymentFound(async (payment) => {
+            console.warn("⚠️ 發現未完成的支付:", payment);
+            await handleIncompletePayment(payment);
+        });
+
+        alert("登入成功！");
+    } catch (error) {
+        console.error("❌ 登入失敗:", error);
+        alert("登入失敗：" + error.message);
+    }
+}
+async function handleIncompletePayment(payment) {
+    try {
+        if (!payment || !payment.identifier) {
+            console.warn("⚠️ 無效的未完成支付");
+            return;
         }
+
+        console.log("🔄 檢查支付狀態:", payment);
+
+        // 1️⃣ 向你的後端請求支付確認
+        const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ paymentId: payment.identifier }),
+        });
+
+        const result = await response.json();
+        console.log("✅ 後端回應:", result);
+
+        if (result.status === "completed") {
+            console.log("✅ 付款已經完成，無需進一步操作");
+        } else if (result.status === "pending") {
+            console.log("🔄 嘗試完成付款...");
+            await completePayment(payment);
+        } else {
+            console.warn("⚠️ 未知狀態，可能需要手動檢查");
+        }
+    } catch (error) {
+        console.error("❌ 處理未完成支付失敗:", error);
+    }
+}
+async function completePayment(payment) {
+    try {
+        console.log("📌 嘗試完成支付:", payment.identifier);
+
+        const response = await Pi.createPayment(payment);
+        console.log("✅ 支付完成:", response);
+
+        alert("支付成功！");
+    } catch (error) {
+        console.error("❌ 支付完成失敗:", error);
+        alert("支付失敗：" + error.message);
+    }
+}
+
 
         // 支付功能 (跳過伺服器驗證)
     async function pay() {
