--- a/index.html
+++ b/index.html
@@ -25,121 +25,109 @@
         });
 
         // 登入功能
-       async function login() {
-    try {
-        // 1️⃣ 進行 Pi Network 身份驗證
-        const authResult = await Pi.authenticate(['username', 'wallet_address']);
-        console.log("✅ 登入成功", authResult);
+        async function login() {
+            try {
+                // 1️⃣ 進行 Pi Network 身份驗證
+                const authResult = await Pi.authenticate(['username', 'wallet_address']);
+                console.log("✅ 登入成功", authResult);
+                currentUser = authResult; // 🔹 保存當前用戶資訊
+                document.getElementById("user-info").textContent = JSON.stringify(authResult, null, 2);
 
-        // 2️⃣ 處理未完成的支付
-        Pi.onIncompletePaymentFound(async (payment) => {
-            console.warn("⚠️ 發現未完成的支付:", payment);
-            await handleIncompletePayment(payment);
-        });
+                // 2️⃣ 檢查未完成支付
+                Pi.onIncompletePaymentFound(handleIncompletePayment);
 
-        alert("登入成功！");
-    } catch (error) {
-        console.error("❌ 登入失敗:", error);
-        alert("登入失敗：" + error.message);
-    }
-}
-async function handleIncompletePayment(payment) {
-    try {
-        if (!payment || !payment.identifier) {
-            console.warn("⚠️ 無效的未完成支付");
-            return;
-        }
-
-        console.log("🔄 檢查支付狀態:", payment);
-
-        // 1️⃣ 向你的後端請求支付確認
-        const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ paymentId: payment.identifier }),
-        });
-
-        const result = await response.json();
-        console.log("✅ 後端回應:", result);
-
-        if (result.status === "completed") {
-            console.log("✅ 付款已經完成，無需進一步操作");
-        } else if (result.status === "pending") {
-            console.log("🔄 嘗試完成付款...");
-            await completePayment(payment);
-        } else {
-            console.warn("⚠️ 未知狀態，可能需要手動檢查");
-        }
-    } catch (error) {
-        console.error("❌ 處理未完成支付失敗:", error);
-    }
-}
-async function completePayment(payment) {
-    try {
-        console.log("📌 嘗試完成支付:", payment.identifier);
-
-        const response = await Pi.createPayment(payment);
-        console.log("✅ 支付完成:", response);
-
-        alert("支付成功！");
-    } catch (error) {
-        console.error("❌ 支付完成失敗:", error);
-        alert("支付失敗：" + error.message);
-    }
-}
-
-
-        // 支付功能 (跳過伺服器驗證)
-    async function pay() {
-    if (!currentUser) return alert("請先登入！");
-
-    try {
-        const paymentData = {
-            amount: 3.14,
-            memo: "測試支付",
-            metadata: { test: "123" }
-        };
-
-        const paymentCallbacks = {
-            onReadyForServerApproval: async (paymentId) => {
-                console.log("支付等待批准:", paymentId);
-
-                // 🔹 這裡請求伺服器批准支付
-                try {
-                    const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/approvePayment", {
-                        method: "POST",
-                        headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ paymentId })
-                    });
-
-                    const result = await response.json();
-                    if (result.success) {
-                        console.log("支付已批准，交易ID:", result.txid);
-                    } else {
-                        console.error("批准支付失敗:", result.error);
-                    }
-                } catch (error) {
-                    console.error("伺服器錯誤:", error);
-                }
-            },
-            onReadyForServerCompletion: (paymentId, txid) => {
-                alert("💰 支付成功！交易ID: " + txid);
-            },
-            onCancel: (paymentId) => {
-                alert("❌ 用戶取消支付");
-            },
-            onError: (error) => {
-                alert("支付錯誤: " + error.message);
+                alert("登入成功！");
+            } catch (error) {
+                console.error("❌ 登入失敗:", error);
+                alert("登入失敗：" + error.message);
             }
-        };
+        }
 
-        const payment = await Pi.createPayment(paymentData, paymentCallbacks);
-        console.log("支付已發起:", payment);
-    } catch (error) {
-        alert("支付失敗: " + error.message);
-    }
-}
+        // 處理未完成支付
+        async function handleIncompletePayment(payment) {
+            try {
+                if (!payment || !payment.identifier) {
+                    console.warn("⚠️ 無效的未完成支付");
+                    return;
+                }
 
+                console.log("🔄 檢查支付狀態:", payment);
+
+                // 1️⃣ 向你的後端請求支付確認
+                const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ paymentId: payment.identifier }),
+                });
+
+                const result = await response.json();
+                console.log("✅ 後端回應:", result);
+
+                if (result.status === "completed") {
+                    console.log("✅ 付款已經完成，無需進一步操作");
+                } else if (result.status === "pending") {
+                    console.log("🔄 嘗試完成付款...");
+                    await Pi.completePayment(payment.identifier);
+                    console.log("✅ 未完成支付已完成");
+                } else {
+                    console.warn("⚠️ 未知狀態，可能需要手動檢查");
+                }
+            } catch (error) {
+                console.error("❌ 處理未完成支付失敗:", error);
+            }
+        }
+
+        // 支付功能
+        async function pay() {
+            if (!currentUser) return alert("請先登入！");
+
+            try {
+                const paymentData = {
+                    amount: 3.14,
+                    memo: "測試支付",
+                    metadata: { test: "123", username: currentUser.username }, // 🔹 加入用戶名
+                    uid: currentUser.uid // 🔹 Pi.createPayment 需要 uid
+                };
+
+                const paymentCallbacks = {
+                    onReadyForServerApproval: async (paymentId) => {
+                        console.log("支付等待批准:", paymentId);
+
+                        // 🔹 這裡請求伺服器批准支付
+                        try {
+                            const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/approvePayment", {
+                                method: "POST",
+                                headers: { "Content-Type": "application/json" },
+                                body: JSON.stringify({ paymentId })
+                            });
+
+                            const result = await response.json();
+                            if (result.success) {
+                                console.log("支付已批准，交易ID:", result.txid);
+                            } else {
+                                console.error("批准支付失敗:", result.error);
+                            }
+                        } catch (error) {
+                            console.error("伺服器錯誤:", error);
+                        }
+                    },
+                    onReadyForServerCompletion: (paymentId, txid) => {
+                        alert("💰 支付成功！交易ID: " + txid);
+                    },
+                    onCancel: (paymentId) => {
+                        alert("❌ 用戶取消支付");
+                    },
+                    onError: (error) => {
+                        alert("支付錯誤: " + error.message);
+                    }
+                };
+
+                const payment = await Pi.createPayment(paymentData, paymentCallbacks);
+                console.log("支付已發起:", payment);
+            } catch (error) {
+                alert("支付失敗: " + error.message);
+            }
+        }
     </script>
 </body>
 </html>
