--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         async function handleIncompletePayment(payment) {
             try {
                 // 1️⃣ 向您的后端请求支付确认
-                const response = await fetch("https://your-backend-url.com/verifyPayment", {
+                const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ paymentId: payment.identifier }),
@@ -87,7 +87,7 @@
                         console.log("支付等待批准:", paymentId);
 
                         try {
-                            const response = await fetch("https://your-backend-url.com/approvePayment", {
+                            const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/approvePayment", {
                                 method: "POST",
                                 headers: { "Content-Type": "application/json" },
                                 body: JSON.stringify({ paymentId })
