--- a/index.html
+++ b/index.html
@@ -36,32 +36,48 @@
             }
         }
 
-        // 处理未完成支付的逻辑
-        async function handleIncompletePayment(payment) {
-            try {
-                // 向后端请求支付状态
-                const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ paymentId: payment.identifier }),
-                });
 
-                const result = await response.json();
-                console.log("✅ 后端响应:", result);
 
-                if (result.status === "completed") {
-                    console.log("✅ 付款已完成");
-                } else if (result.status === "pending") {
-                    console.log("🔄 尝试完成付款...");
-                    await Pi.completePayment(payment.identifier); // 完成支付
-                    console.log("✅ 支付已完成");
-                } else {
-                    console.warn("⚠️ 支付状态未知");
-                }
-            } catch (error) {
-                console.error("❌ 处理未完成支付失败:", error);
-            }
-        }
+
+    async function handleIncompletePayment(payment) {
+  try {
+    const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ paymentId: payment.identifier }),
+    });
+
+    if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+    
+    const result = await response.json();
+    console.log("✅ 后端响应:", result);
+
+    // 处理所有可能的支付状态
+    switch (result.status) {
+      case "completed":
+        console.log("✅ 付款已完成");
+        await Pi.completePayment(payment.identifier); // 确保标记为完成
+        break;
+      case "pending":
+        console.log("🔄 尝试完成付款...");
+        await Pi.completePayment(payment.identifier);
+        console.log("✅ 支付已完成");
+        break;
+      case "failed":
+        console.log("❌ 支付已失败");
+        await Pi.cancelPayment(payment.identifier);
+        break;
+      default:
+        console.warn("⚠️ 未知支付状态:", result.status);
+        // 添加自动重试逻辑
+        setTimeout(() => handleIncompletePayment(payment), 5000);
+    }
+  } catch (error) {
+    console.error("❌ 处理未完成支付失败:", error);
+    // 添加错误重试机制
+    setTimeout(() => handleIncompletePayment(payment), 10000);
+  }
+}
 
         // 支付功能
         async function pay() {
