--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 
-    async function handleIncompletePayment(payment) {
+  async function handleIncompletePayment(payment) {
   try {
     const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
       method: "POST",
@@ -47,35 +47,53 @@
       body: JSON.stringify({ paymentId: payment.identifier }),
     });
 
-    if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-    
-    const result = await response.json();
-    console.log("✅ 后端响应:", result);
-
-    // 处理所有可能的支付状态
-    switch (result.status) {
-      case "completed":
-        console.log("✅ 付款已完成");
-        await Pi.completePayment(payment.identifier); // 确保标记为完成
-        break;
-      case "pending":
-        console.log("🔄 尝试完成付款...");
-        await Pi.completePayment(payment.identifier);
-        console.log("✅ 支付已完成");
-        break;
-      case "failed":
-        console.log("❌ 支付已失败");
-        await Pi.cancelPayment(payment.identifier);
-        break;
-      default:
-        console.warn("⚠️ 未知支付状态:", result.status);
-        // 添加自动重试逻辑
-        setTimeout(() => handleIncompletePayment(payment), 5000);
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
     }
+
+    const paymentData = await response.json();
+    console.log("🔍 Pi API 原始响应:", paymentData);
+
+    // 状态解析逻辑
+    const status = paymentData.status || {};
+    const isCancelled = status.cancelled || status.user_cancelled;
+
+    // 状态决策树
+    if (isCancelled) {
+      console.log("❌ 支付已被取消");
+      await Pi.cancelPayment(payment.identifier);
+      return;
+    }
+
+    if (status.developer_completed) {
+      console.log("✅ 支付已完成");
+      return;
+    }
+
+    if (status.transaction_verified) {
+      console.log("🔄 交易已验证，正在完成支付流程...");
+      await Pi.completePayment(payment.identifier);
+      console.log("✅ 支付最终确认完成");
+      return;
+    }
+
+    if (status.developer_approved) {
+      console.log("⚠️ 支付已批准但未验证，等待区块链确认...");
+      // 添加轮询检查
+      const checkInterval = setInterval(async () => {
+        const updated = await verifyPayment(payment.identifier);
+        if (updated.status.transaction_verified) {
+          clearInterval(checkInterval);
+          await Pi.completePayment(payment.identifier);
+        }
+      }, 5000);
+      return;
+    }
+
+    console.warn("🔄 支付处于初始状态，等待处理...");
   } catch (error) {
-    console.error("❌ 处理未完成支付失败:", error);
-    // 添加错误重试机制
-    setTimeout(() => handleIncompletePayment(payment), 10000);
+    console.error("❌ 支付状态检查失败:", error);
+    setTimeout(() => handleIncompletePayment(payment), 10000); // 10秒后重试
   }
 }
 
