--- a/index.html
+++ b/index.html
@@ -39,61 +39,30 @@
 
 
 
-  async function handleIncompletePayment(payment) {
+ async function handleIncompletePayment(payment) {
   try {
-    const response = await fetch("https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/verifyPayment", {
+    const response = await fetch("/.netlify/functions/verifyPayment", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ paymentId: payment.identifier }),
     });
 
-    if (!response.ok) {
-      throw new Error(`HTTP error! status: ${response.status}`);
-    }
-
-    const paymentData = await response.json();
-    console.log("🔍 Pi API 原始响应:", paymentData);
-
-    // 状态解析逻辑
-    const status = paymentData.status || {};
-    const isCancelled = status.cancelled || status.user_cancelled;
-
-    // 状态决策树
-    if (isCancelled) {
-      console.log("❌ 支付已被取消");
+    const result = await response.json();
+    
+    // 根据标准化状态处理
+    if (result.status.isCancelled) {
       await Pi.cancelPayment(payment.identifier);
       return;
     }
 
-    if (status.developer_completed) {
-      console.log("✅ 支付已完成");
-      return;
-    }
-
-    if (status.transaction_verified) {
-      console.log("🔄 交易已验证，正在完成支付流程...");
+    if (result.status.isVerified && !result.status.isCompleted) {
       await Pi.completePayment(payment.identifier);
-      console.log("✅ 支付最终确认完成");
-      return;
     }
 
-    if (status.developer_approved) {
-      console.log("⚠️ 支付已批准但未验证，等待区块链确认...");
-      // 添加轮询检查
-      const checkInterval = setInterval(async () => {
-        const updated = await verifyPayment(payment.identifier);
-        if (updated.status.transaction_verified) {
-          clearInterval(checkInterval);
-          await Pi.completePayment(payment.identifier);
-        }
-      }, 5000);
-      return;
-    }
-
-    console.warn("🔄 支付处于初始状态，等待处理...");
   } catch (error) {
-    console.error("❌ 支付状态检查失败:", error);
-    setTimeout(() => handleIncompletePayment(payment), 10000); // 10秒后重试
+    console.error("支付处理失败:", error);
+    // 显示具体错误代码
+    alert(`错误代码: ${error.code || 'UNKNOWN'}`);
   }
 }
 
