--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ async function onIncompletePaymentFound(payment) {
 }
 function handleIncompletePayment(payment) {
   // 发送请求到服务器，尝试完成支付
-  fetch('/server/complete_payment', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({ paymentId: payment.identifier }),
-  })
+fetch('https://tubular-kelpie-4997f4.netlify.app/.netlify/functions/completepayment', {
+  method: 'POST',
+  headers: {
+    'Content-Type': 'application/json',
+  },
+  body: JSON.stringify({ paymentId: payment.identifier }),
+})
   .then(response => response.json())
   .then(data => {
     if (data.success) {
